Edit footer styles

--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -1,7 +1,7 @@
 // COLORS
-$color-primary: #55c57a;
-$color-primary-light: #7ed56f;
-$color-primary-dark: #28b485;
+$color-primary: #5560c5;
+$color-primary-light: #6f76d5;
+$color-primary-dark: #282ab4;
 
 $color-secondary-light: #ffb908;
 $color-secondary-dark: #ff7730;
@@ -18,6 +18,13 @@ $color-grey-dark-3: #333;
 
 $color-white: #fff;
 $color-black: #000;
+
+$color-green: #55c57a;
+$color-green-light: #7ed56f;
+$color-green-dark: #28b485;
+
+$color-footer: #EAEAEA;
+$color-footer-link: rgb(100, 100, 100);
 
 // FONT
 $default-font-size: 1.6rem;
