--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ body {
   margin-bottom: 6rem; }
   .heading-primary--main {
     display: block;
-    font-size: 6rem;
+    font-size: 4rem;
     font-weight: 700;
     letter-spacing: 3.5rem;
     animation-name: moveInLeft;
@@ -97,7 +97,7 @@ body {
   font-size: 3rem;
   text-transform: uppercase;
   font-weight: 700;
-  background-image: linear-gradient(to right, #7ed56f, #28b485);
+  background-image: linear-gradient(to right, #6f76d5, #282ab4);
   display: inline-block;
   -webkit-background-clip: text;
   color: transparent;
@@ -111,7 +111,7 @@ body {
   font-size: 2rem;
   text-transform: uppercase;
   font-weight: 700;
-  background-image: linear-gradient(to right, #7ed56f, #28b485);
+  background-image: linear-gradient(to right, #6f76d5, #282ab4);
   display: inline-block;
   -webkit-background-clip: text;
   color: transparent;
@@ -183,10 +183,10 @@ body {
     background-color: #fff; }
 
 .btn--green {
-  background-color: #55c57a;
+  background-color: #5560c5;
   color: #fff; }
   .btn--green::after {
-    background-color: #55c57a; }
+    background-color: #5560c5; }
 
 .btn::after {
   content: "";
@@ -206,14 +206,14 @@ body {
 
 .btn-text:link, .btn-text:visited {
   font-size: 1.6rem;
-  color: #55c57a;
+  color: #5560c5;
   display: inline-block;
   text-decoration: none;
-  border-bottom: 1px solid #55c57a;
+  border-bottom: 1px solid #5560c5;
   padding: 3px; }
 
 .btn-text:hover {
-  background-color: #55c57a;
+  background-color: #5560c5;
   color: #fff;
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0);
   transform: translateY(-2px); }
@@ -255,12 +255,18 @@ body {
       left: 20%;
       top: 10rem; }
     .composition__photo:hover {
-      outline: 1.5rem solid #55c57a;
+      outline: 1.5rem solid #5560c5;
       transform: scale(1.05) translateY(-0.5rem);
       box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
       z-index: 20; }
   .composition:hover .composition__photo:not(:hover) {
     transform: scale(0.95); }
+
+#card-1 {
+  color: #ff7730; }
+
+#card-2 {
+  color: #55c57a; }
 
 .card {
   perspective: 150rem;
@@ -328,7 +334,7 @@ body {
     .card__heading-span--1 {
       background-image: linear-gradient(to right bottom, rgba(255, 185, 8, 0.85), rgba(255, 119, 48, 0.85)); }
     .card__heading-span--2 {
-      background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.85), rgba(40, 180, 133, 0.85)); }
+      background-image: linear-gradient(to right bottom, rgba(111, 118, 213, 0.85), rgba(40, 42, 180, 0.85)); }
     .card__heading-span--3 {
       background-image: linear-gradient(to right bottom, rgba(41, 152, 255, 0.85), rgba(86, 67, 250, 0.85)); }
   .card__details {
@@ -374,7 +380,7 @@ body {
     font-size: 6rem;
     margin-bottom: .5rem;
     display: inline-block;
-    background-image: linear-gradient(to right, #7ed56f, #28b485);
+    background-image: linear-gradient(to right, #6f76d5, #282ab4);
     -webkit-background-clip: text;
     color: transparent; }
   .feature-box:hover {
@@ -430,7 +436,7 @@ body {
 
 .header {
   height: 95vh;
-  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../img/hero.jpg");
+  background-image: linear-gradient(to right bottom, rgba(111, 118, 213, 0.8), rgba(40, 42, 180, 0.8)), url("../img/background.jpeg");
   background-size: cover;
   background-position: top;
   position: relative;
@@ -475,16 +481,16 @@ body {
   .row .col-3-of-4 {
     width: calc(3 * ((100% - 3 * 6rem) / 4) + 6rem); }
 
+#email {
+  text-align: end; }
+
 .footer {
-  background-color: #333;
-  padding: 10rem 0;
+  background-color: #EAEAEA;
+  padding: 5rem 0;
   font-size: 1.4rem; }
   .footer__logo-box {
     text-align: center;
     margin-bottom: 8rem; }
-  .footer__logo {
-    width: 15rem;
-    height: auto; }
   .footer__navigation {
     border-top: 1px solid #777;
     padding-top: 2rem;
@@ -496,14 +502,14 @@ body {
     .footer__item:not(:last-child) {
       margin-right: 1.5rem; }
   .footer__link:link, .footer__link:visited {
-    color: #f7f7f7;
+    color: #646464;
     text-decoration: none;
     text-transform: uppercase;
     display: inline-block;
     transition: all .2s;
-    background-color: #333; }
+    background-color: #EAEAEA; }
   .footer__link:hover, .footer__link:active {
-    color: #55c57a;
+    color: #5560c5;
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
     transform: rotate(5deg) scale(1.3); }
   .footer__copright {
@@ -516,11 +522,11 @@ body {
 
 .navigation__button {
   background-color: #fff;
-  height: 7rem;
-  width: 7rem;
+  height: 4rem;
+  width: 4rem;
   position: fixed;
-  top: 6rem;
-  right: 6rem;
+  top: 7rem;
+  right: 7rem;
   border-radius: 50%;
   z-index: 2000;
   box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
@@ -528,13 +534,13 @@ body {
   cursor: pointer; }
 
 .navigation__background {
-  height: 6rem;
-  width: 6rem;
+  height: 4rem;
+  width: 4rem;
   border-radius: 50%;
   position: fixed;
-  top: 6.5rem;
-  right: 6.5rem;
-  background-image: radial-gradient(#7ed56f, #28b485);
+  top: 7rem;
+  right: 7rem;
+  background-image: radial-gradient(#6f76d5, #282ab4);
   z-index: 1000;
   transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1); }
 
@@ -575,7 +581,7 @@ body {
 
 .navigation__link:hover, .navigation__link:active {
   background-position: 100%;
-  color: #55c57a;
+  color: #5560c5;
   transform: translateX(1rem); }
 
 .navigation__checkbox:checked ~ .navigation__background {
@@ -587,10 +593,10 @@ body {
 
 .navigation__icon {
   position: relative;
-  margin-top: 3.5rem; }
+  margin-top: 2rem; }
   .navigation__icon, .navigation__icon::before, .navigation__icon::after {
-    width: 3rem;
-    height: 2px;
+    width: 2rem;
+    height: 1px;
     background-color: #333;
     display: inline-block; }
   .navigation__icon::before, .navigation__icon::after {
@@ -599,15 +605,15 @@ body {
     left: 0;
     transition: all .2s; }
   .navigation__icon::before {
-    top: -.8rem; }
+    top: -.5rem; }
   .navigation__icon::after {
-    top: .8rem; }
+    top: .5rem; }
 
 .navigation__button:hover .navigation__icon::before {
-  top: -1rem; }
+  top: -.5rem; }
 
 .navigation__button:hover .navigation__icon::after {
-  top: 1rem; }
+  top: .5rem; }
 
 .navigation__checkbox:checked + .navigation__button .navigation__icon {
   background-color: transparent; }
@@ -627,7 +633,7 @@ body {
 
 .section-features {
   padding: 20rem 0;
-  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../../img/nat-4.jpg");
+  background-image: linear-gradient(to right bottom, rgba(111, 118, 213, 0.8), rgba(40, 42, 180, 0.8)), url("../../img/nat-4.jpg");
   height: auto;
   background-size: cover;
   margin-top: -10rem;
@@ -637,7 +643,7 @@ body {
 
 .section-tours {
   background-color: #f7f7f7;
-  padding: 25rem 0 2rem 0;
+  padding: 15rem 0 2rem 0;
   margin-top: -10rem; }
 
 .section-stories {
@@ -647,7 +653,7 @@ body {
 
 .section-book {
   padding: 15rem 0;
-  background-image: linear-gradient(to right bottom, #7ed56f, #28b485); }
+  background-image: linear-gradient(to right bottom, #6f76d5, #282ab4); }
 
 .book {
   background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url("../img/nat-10.jpg");
