--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,7 +4,7 @@
         to right bottom, 
         rgba($color-primary-light, 0.8),
         rgba($color-primary-dark, 0.8)), 
-        url('../img/hero.jpg');
+        url('../img/background.jpeg');
     background-size: cover;
     background-position: top;
 
