--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -16,6 +16,10 @@ $color-grey-dark: #777;
 $color-grey-dark-2: #999;
 $color-grey-dark-3: #333;
 
+$color-bookcraze: #635752;
+$color-bookcraze-light: #a8968d;
+$color-bookcraze-dark: #4E443F;
+
 $color-white: #fff;
 $color-black: #000;
 
@@ -33,3 +37,4 @@ $default-font-size: 1.6rem;
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
 $gutter-horizontal: 6rem;
+$gutter-vertical-small: 6rem;
