--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,11 +1,8 @@
 body {
     font-family: "Lato", sans-serif;
     font-weight: 400;
-    font-size: 1.6rem;
     line-height: 1.7;
     color: $color-grey-dark;
-    padding: 3rem;
-    box-sizing: border-box;
 }
 
 .heading-primary {
@@ -15,6 +12,7 @@ body {
     backface-visibility: hidden;
     margin-bottom: 6rem;
 
+
     &--main {
         display: block;
         font-size: 4rem;
@@ -23,6 +21,11 @@ body {
         animation-name: moveInLeft;
         animation-duration: 1s;
         animation-timing-function: ease-out;
+
+        @include respond(phone) {
+            letter-spacing: 1rem;
+            font-family: 5rem;
+        }
     }
     
     &--sub {
@@ -30,8 +33,11 @@ body {
         font-size: 2rem;
         font-weight: 400;
         letter-spacing: 1.74rem;
-    
         animation: moveInRight 1s ease-out;
+
+        @include respond(phone) {
+            letter-spacing: .5rem;
+        }
     }
 }
 
@@ -46,6 +52,14 @@ body {
     color: transparent;
     letter-spacing: .2rem;
     transition: all .2s;
+
+    @include respond(tab-port) {
+        font-size: 3rem;
+    }
+
+    @include respond(phone) {
+        font-size: 2.5rem;
+    }
 
     &:hover {
         transform: skewY(3deg) skewX(15deg) scale(1.1);
