--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -8,6 +8,10 @@
     color: $color-green;
 }
 
+#card-3 {
+    color: $color-bookcraze;
+}
+
 .card {
     // FUNCTIONALITY
     perspective: 150rem;
@@ -16,6 +20,7 @@
     height: 52rem;
 
     &__side {
+        height: 52rem;
         background-color: white;
         color: #fff;
         font-size: 2rem;
@@ -50,7 +55,7 @@
             }
 
             &-3 {
-                background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark);
+                background-image: linear-gradient(to right bottom, $color-bookcraze-light, $color-bookcraze-dark);
             }
         }
     }
@@ -84,7 +89,7 @@
         }
 
         &--3 {
-            background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark),
+            background-image: linear-gradient(to right bottom, $color-bookcraze-light, $color-bookcraze-dark),
             url('../img/index-page.png');
         }
     }
@@ -144,7 +149,6 @@
                 }
             }
         }
- 
     }
 
     &__cta {
@@ -156,19 +160,76 @@
         width: 90%;
     }
 
-    &__price-box {
+    &__project-box {
         text-align: center;
         color: $color-white;
         margin-bottom: 8rem;
     }
 
-    &__price-only {
+    &__project-only {
         font-size: 1.4rem;
         text-transform: uppercase;
+        text-decoration: none;
+        color: white;
+        transition: all .5s;
     }
 
-    &__price-value {
-        font-size: 6rem;
-        font-weight: 100;
+    &__project-only:hover {
+        transition: all .5s;
+        font-size: 2rem;
+        text-transform: uppercase;
+        text-decoration: none;
+        color: white;
+    }
+
+
+
+    @include respond(tab-port) {
+        height: auto;
+        border-radius: 3px;
+        background-color: $color-white;
+        box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
+
+        &__side {
+            height: auto;
+            position: relative;
+            box-shadow: none;
+
+            &--back {
+                transform: rotateY(0);
+                clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+            }
+        }
+
+        &:hover &__side--front {
+            transform: rotateY(0);
+        }
+
+        &__details {
+            padding: 1 3rem;
+        }
+
+        // FRONT SIDE STYLING
+        
+        &__cta {
+            position: relative;
+            top: 0;
+            left: 0;
+            transform: translate(0);
+            width: 100%;
+            padding: 7rem 4rem 4rem 4rem;
+        }
+
+        &__project-box {
+            margin-bottom: 3rem;
+        }
+
+        &__project-only {
+            transition: all .5s;
+            font-size: 2rem;
+            text-transform: uppercase;
+            text-decoration: none;
+            color: white;
+        }
     }
 }
