--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -7,6 +7,21 @@
     padding: 5rem 0;
     font-size: 1.4rem;
 
+    @include respond(tab-port) {
+        padding: 8rem 0;
+    }
+
+    &__email {
+        &:link {
+            color: $color-footer-link;
+            text-decoration: none;
+            text-transform: uppercase;
+            display: inline-block;
+            transition: all .2s;
+            background-color: $color-footer;
+        }
+    }
+
     &__logo-box {
         text-align: center;
         margin-bottom: 8rem;
@@ -16,6 +31,11 @@
         border-top: 1px solid $color-grey-dark;
         padding-top: 2rem;  
         display: inline-block;
+
+        @include respond(tab-port) {
+            width: 100%;
+            text-align: center;
+        }
     }
 
     &__list {
@@ -53,5 +73,10 @@
         border-top: 1px solid $color-grey-dark;
         padding-top: 2rem;
         width: 80%;
+
+        @include respond(tab-port) {
+            width: 100%;
+            text-align: center;
+        }
     }
 }
