--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -8,13 +8,23 @@
     height: 4rem;
     width: 4rem;
     position: fixed;
-    top: 7rem;
-    right: 7rem;
+    top: 6rem;
+    right: 6rem;
     border-radius: 50%;
     z-index: 2000;
     box-shadow: 0 1rem 3rem rgba($color-black, .1);
     text-align: center;
     cursor: pointer;
+
+    @include respond(tab-port) {
+      top: 3.5rem;
+      right: 3.5rem;
+    }
+
+    @include respond(phone) {
+      top: 2.5rem;
+      right: 2.5rem;
+    }
   }
 
   &__background {
@@ -22,11 +32,21 @@
     width: 4rem;
     border-radius: 50%;
     position: fixed;
-    top: 7rem;
-    right: 7rem;
+    top: 6rem;
+    right: 6rem;
     background-image: radial-gradient($color-primary-light, $color-primary-dark);
     z-index: 1000;
     transition: transform .8s cubic-bezier(0.86, 0, 0.07, 1);
+
+    @include respond(tab-port) {
+      top: 3.5rem;
+      right: 3.5rem;
+    }
+
+    @include respond(phone) {
+      top: 2.5rem;
+      right: 2.5rem;
+    }
   }
 
   &__nav {
