--- a/css/style.css
+++ b/css/style.css
@@ -503,130 +503,13 @@ body {
         width: 100%;
         text-align: center; } }
 
-.navigation__checkbox {
-  display: none; }
+.section-about {
+  background-color: #f7f7f7;
+  padding: 15rem 2rem 8rem 2rem;
+  margin-top: -15vh; }
 
-.navigation__button {
-  background-color: #fff;
-  height: 4rem;
-  width: 4rem;
-  position: fixed;
-  top: 6rem;
-  right: 6rem;
-  border-radius: 50%;
-  z-index: 2000;
-  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
-  text-align: center;
-  cursor: pointer; }
-  @media only screen and (max-width: 56.25em) {
-    .navigation__button {
-      top: 3.5rem;
-      right: 3.5rem; } }
-  @media only screen and (max-width: 37.5em) {
-    .navigation__button {
-      top: 2.5rem;
-      right: 2.5rem; } }
-
-.navigation__background {
-  height: 4rem;
-  width: 4rem;
-  border-radius: 50%;
-  position: fixed;
-  top: 6rem;
-  right: 6rem;
-  background-image: radial-gradient(#6f76d5, #282ab4);
-  z-index: 1000;
-  transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1); }
-  @media only screen and (max-width: 56.25em) {
-    .navigation__background {
-      top: 3.5rem;
-      right: 3.5rem; } }
-  @media only screen and (max-width: 37.5em) {
-    .navigation__background {
-      top: 2.5rem;
-      right: 2.5rem; } }
-
-.navigation__nav {
-  height: 100vh;
-  width: 0;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1500;
-  opacity: 0;
-  width: 0;
-  transition: all .8s; }
-
-.navigation__list {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  list-style: none;
-  text-align: center;
-  width: 100%; }
-
-.navigation__item {
-  margin: 3rem; }
-
-.navigation__link:link, .navigation__link:visited {
-  font-size: 3rem;
-  font-weight: 300;
-  color: #fff;
-  padding: 1rem 2rem;
-  text-decoration: none;
-  text-transform: uppercase;
-  background-size: 200%;
-  background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #fff 50%);
-  transition: all .4s;
-  display: inline-block; }
-
-.navigation__link:hover, .navigation__link:active {
-  background-position: 100%;
-  color: #5560c5;
-  transform: translateX(1rem); }
-
-.navigation__checkbox:checked ~ .navigation__background {
-  transform: scale(80); }
-
-.navigation__checkbox:checked ~ .navigation__nav {
-  opacity: 1;
-  width: 100%; }
-
-.navigation__icon {
-  position: relative;
-  margin-top: 2rem; }
-  .navigation__icon, .navigation__icon::before, .navigation__icon::after {
-    width: 2rem;
-    height: 1px;
-    background-color: #333;
-    display: inline-block; }
-  .navigation__icon::before, .navigation__icon::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    transition: all .2s; }
-  .navigation__icon::before {
-    top: -.5rem; }
-  .navigation__icon::after {
-    top: .5rem; }
-
-.navigation__button:hover .navigation__icon::before {
-  top: -.5rem; }
-
-.navigation__button:hover .navigation__icon::after {
-  top: .5rem; }
-
-.navigation__checkbox:checked + .navigation__button .navigation__icon {
-  background-color: transparent; }
-
-.navigation__checkbox:checked + .navigation__button .navigation__icon::before {
-  top: 0;
-  transform: rotate(135deg); }
-
-.navigation__checkbox:checked + .navigation__button .navigation__icon::after {
-  top: 0;
-  transform: rotate(-135deg); }
+.paragraph::selection {
+  color: #5560c5; }
 
 .section-projects {
   background-color: #f7f7f7;
